up to about me/contact, linking issues

--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ text-align: center;
 transition: text-decoration-color .3s ease-in-out;
 }
 
-#nav a:hover { 
+#nav a:hover, #nav a.active { 
   text-decoration-color: var(--body-color);
 }
 
@@ -242,6 +242,10 @@ transition: text-decoration-color .3s ease-in-out;
   opacity: 1;
 }
 
+.writing-item .date-holder {
+  margin-bottom: .25em;
+}
+
 .work-item img {
   display: block;
   position: absolute;
@@ -252,8 +256,11 @@ transition: text-decoration-color .3s ease-in-out;
   height: 100%;
 }
 
-.writing-item .date-holder {
-  margin-bottom: .25em;
+.writing-item .caption {
+  font-size: .75 rem;
+  color: #666666;
+  display: inline-block;
+  text-align: right;
 }
 
 .writing-item .date {
@@ -261,7 +268,10 @@ transition: text-decoration-color .3s ease-in-out;
   font-size: .85rem;
   padding: 0 4px;
   color: var(--background-color);
-  display: inline-block;
+  display: block;
+  width: 100%;
+  margin-top: .5rem;
+  margin-bottom: 2rem;
   background-color: var(--body-color);
 }
 
@@ -281,10 +291,11 @@ transition: text-decoration-color .3s ease-in-out;
   text-decoration-color: var(--body-color); 
 }
 
-/*PORTFOLIO*/
+/*PORTFOLIO + WRITING*/
 
-#portfolio {
+#portfolio, #writing {
   margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
 #portfolio .work-item {
