--- a/css/style.css
+++ b/css/style.css
@@ -306,6 +306,13 @@ transition: text-decoration-color .3s ease-in-out;
   padding-top: calc((9 / 16) * 100%);
 }
 
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
 .box {
   border: 1px solid black;
   padding: 10%;
@@ -313,12 +320,7 @@ transition: text-decoration-color .3s ease-in-out;
   margin-right: auto;
   grid-column: span 10;
   text-align: center;
-}
-
-.img {
-  width: 100%;
-  height: 100%;
-}
+} 
 
 #portfolio .work-item .inner .work-inside {
   opacity: 1;
@@ -382,6 +384,7 @@ transition: text-decoration-color .3s ease-in-out;
   #intro-holder {
 
   }
+}
 
 }
 
